keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.4
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --log-level=INFO,org.keycloak.events:DEBUG
            - --cache-stack=kubernetes
            - --proxy-headers=xforwarded
            - --health-enabled=true
            - --http-enabled=true
            - --log=console,file,syslog
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
            - containerPort: 9000
              name: 9000tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /kerberos_conf
              name: kerberos
            - mountPath: /opt/keycloak/data/log
              name: logs
      # nodeName: swarm203 # keycloak used to be pinned to swarm203, but when migrating to flux this was removed.
                           # If there are issues, we can pin again
      volumes:
        - name: kerberos
          persistentVolumeClaim:
            claimName: kerberos
        - name: logs
          persistentVolumeClaim:
            claimName: logs
