keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    io.kompose.service: keycloak
  ports:
    - name: '9413'
      port: 9413
      targetPort: 8080
    - name: '9415'
      port: 9415
      targetPort: 9000
