keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-acr-strip-1
  namespace: keycloak-prod
spec:
  redirectRegex:
    permanent: false
    regex: ^/realms/GEWISWG/protocol/openid-connect/auth\?acr_values=[0-9A-Za-z]+$
    replacement: /realms/GEWISWG/protocol/openid-connect/auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-acr-strip-2
  namespace: keycloak-prod
spec:
  redirectRegex:
    permanent: false
    regex: ^(/realms/GEWISWG/protocol/openid-connect/auth\?)acr_values=[0-9A-Za-z]+&(.+)$
    replacement: ${1}${2}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-acr-strip-3
  namespace: keycloak-prod
spec:
  redirectRegex:
    permanent: false
    regex: ^(/realms/GEWISWG/protocol/openid-connect/auth\?.+)&acr_values=[0-9A-Za-z]+(.*)$
    replacement: ${1}${2}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-health-allow
  namespace: keycloak-prod
spec:
  ipWhiteList:
    sourceRange:
      - 131.155.69.69/32
      - 131.155.68.104/32
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-root-redirect
  namespace: keycloak-prod
spec:
  redirectRegex:
    permanent: false
    regex: ^https?://auth\.gewis\.nl/?$
    replacement: https://auth.gewis.nl/realms/GEWISWG/account/
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: >-
        Host(`auth.gewis.nl`) && (PathPrefix(`/js/`) || PathPrefix(`/realms/`)
        || PathPrefix(`/resources/`) || Path(`/robots.txt`) ||
        PathPrefix(`/welcome-content/`))
      middlewares:
        - name: keycloak-acr-strip-1
        - name: keycloak-acr-strip-2
        - name: keycloak-acr-strip-3
      services:
        - name: keycloak
          port: 9413
    - match: Host(`auth.gewis.nl`) && PathPrefix(`/health`)
      middlewares:
        - name: keycloak-health-allow
      services:
        - name: keycloak
          port: 9415
    - match: Host(`auth.gewis.nl`) && Path(`/`)
      middlewares:
        - name: keycloak-root-redirect
      priority: 3000
      services:
        - name: keycloak
          port: 9413
    - match: Host(`auth-admin.gewis.nl`) && PathPrefix(`/`)
      services:
        - name: keycloak
          port: 9413
